Add external integration event framework (#94)
Closes #26
